2010-03-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py, preferences.py, gphotoframe.glade:
	  If the weight is 0 on photo source, the source should be ignored.
	* photoimageclutter.py: Code refactoring.
	* utils/nullobject.py: Initial import.

2010-03-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py, photoimageclutter.py: Added support for F-Spot Rating.

2010-03-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py: Added ActorFavIconNum.

2010-03-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.6.2 release.
	* flickr/api.py: Fixed invalid Flickr NSID API URL (issue #47).

2010-03-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.6.1 release.
	* photoframe.py: Fixed a gconf default value error (issue #44).

2010-03-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.6 release.

2010-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py: Always show the image of menu items.
	* plugins/*: Added Icons to Plugins Treeview.

2010-02-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py, picasa.py: Implemented plugin check functions.
	* plugins/*, preferences.py: Changed SOURCE_LIST elements from str
	  to class ('F-Spot' -> FSpotPlugin).

2010-02-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoliststore.py: Fixed a cache file removing bug.
	* fspot.py: Added support for rating on F-Spot.

2010-02-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr.py: Added support for liking on Tumblr.
	* plugins/flickr/, base.py: Added support for Favoring on Flickr.
	* photoframe.py: Reimplemented frame fix mode for clutter.
	* picasa.py: : Added support geo infomation of Picasa Web photos.
	* plugins/base.py, utils/EXIF.py: Added support for EXIF geo
	  information.
	* flickr/__init__.py, flickr/api.py: Added support geo infomation
	  of Flickr photos.
	* photoimageclutter.py, photoimagegtk.py, photoframe.py:
	  Added support for hide/show function for Icons.
